--- a/experimentation.ipynb
+++ b/experimentation.ipynb
@@ -2216,113 +2216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[[ 183.0000,   54.5591,   54.4640,   54.5770,   54.6160,   54.4640],\n",
-       "          [ 431.0000,   54.5877,   54.5760,   54.6180,   54.6410,   54.3900],\n",
-       "          [ 538.0000,   54.6423,   54.6160,   54.6630,   54.6870,   54.4710],\n",
-       "          [ 498.0000,   54.6885,   54.6430,   54.7540,   54.7870,   54.3900],\n",
-       "          [ 124.0000,   54.7292,   54.7640,   54.6900,   54.7770,   54.6660],\n",
-       "          [  17.0000,   54.6901,   54.7030,   54.7380,   54.7540,   54.6730]],\n",
-       " \n",
-       "         [[ 431.0000,   54.5877,   54.5760,   54.6180,   54.6410,   54.3900],\n",
-       "          [ 538.0000,   54.6423,   54.6160,   54.6630,   54.6870,   54.4710],\n",
-       "          [ 498.0000,   54.6885,   54.6430,   54.7540,   54.7870,   54.3900],\n",
-       "          [ 124.0000,   54.7292,   54.7640,   54.6900,   54.7770,   54.6660],\n",
-       "          [  17.0000,   54.6901,   54.7030,   54.7380,   54.7540,   54.6730],\n",
-       "          [ 769.0000,   54.6996,   54.6950,   54.6920,   54.7580,   54.5500]],\n",
-       " \n",
-       "         [[ 538.0000,   54.6423,   54.6160,   54.6630,   54.6870,   54.4710],\n",
-       "          [ 498.0000,   54.6885,   54.6430,   54.7540,   54.7870,   54.3900],\n",
-       "          [ 124.0000,   54.7292,   54.7640,   54.6900,   54.7770,   54.6660],\n",
-       "          [  17.0000,   54.6901,   54.7030,   54.7380,   54.7540,   54.6730],\n",
-       "          [ 769.0000,   54.6996,   54.6950,   54.6920,   54.7580,   54.5500],\n",
-       "          [ 705.0000,   54.8196,   54.6930,   54.8860,   55.0030,   54.5600]],\n",
-       " \n",
-       "         ...,\n",
-       " \n",
-       "         [[ 167.0000,   57.8564,   57.8980,   57.8330,   57.9180,   57.8130],\n",
-       "          [ 659.0000,   57.8405,   57.8310,   57.8200,   57.9930,   55.4430],\n",
-       "          [1256.0000,   57.8238,   57.8190,   57.8390,   57.9270,   57.6600],\n",
-       "          [ 397.0000,   57.8249,   57.8780,   57.7390,   57.8860,   57.6550],\n",
-       "          [ 158.0000,   57.7373,   57.7390,   58.0300,   58.0350,   57.5340],\n",
-       "          [ 322.0000,   57.8106,   58.0770,   57.9320,   58.0770,   57.6500]],\n",
-       " \n",
-       "         [[ 659.0000,   57.8405,   57.8310,   57.8200,   57.9930,   55.4430],\n",
-       "          [1256.0000,   57.8238,   57.8190,   57.8390,   57.9270,   57.6600],\n",
-       "          [ 397.0000,   57.8249,   57.8780,   57.7390,   57.8860,   57.6550],\n",
-       "          [ 158.0000,   57.7373,   57.7390,   58.0300,   58.0350,   57.5340],\n",
-       "          [ 322.0000,   57.8106,   58.0770,   57.9320,   58.0770,   57.6500],\n",
-       "          [ 154.0000,   57.9020,   57.9320,   55.8970,   58.0770,   55.8970]],\n",
-       " \n",
-       "         [[1256.0000,   57.8238,   57.8190,   57.8390,   57.9270,   57.6600],\n",
-       "          [ 397.0000,   57.8249,   57.8780,   57.7390,   57.8860,   57.6550],\n",
-       "          [ 158.0000,   57.7373,   57.7390,   58.0300,   58.0350,   57.5340],\n",
-       "          [ 322.0000,   57.8106,   58.0770,   57.9320,   58.0770,   57.6500],\n",
-       "          [ 154.0000,   57.9020,   57.9320,   55.8970,   58.0770,   55.8970],\n",
-       "          [ 785.0000,   57.9079,   57.9960,   57.8680,   58.1630,   56.3030]]]),\n",
-       " tensor([[[7.6900e+02, 5.4700e+01, 5.4695e+01, 5.4692e+01, 5.4758e+01,\n",
-       "           5.4550e+01],\n",
-       "          [7.0500e+02, 5.4820e+01, 5.4693e+01, 5.4886e+01, 5.5003e+01,\n",
-       "           5.4560e+01],\n",
-       "          [1.3450e+03, 5.4925e+01, 5.4884e+01, 5.4994e+01, 5.5046e+01,\n",
-       "           5.4717e+01],\n",
-       "          [1.4530e+03, 5.5026e+01, 5.4991e+01, 5.5057e+01, 5.5074e+01,\n",
-       "           5.4720e+01]],\n",
-       " \n",
-       "         [[7.0500e+02, 5.4820e+01, 5.4693e+01, 5.4886e+01, 5.5003e+01,\n",
-       "           5.4560e+01],\n",
-       "          [1.3450e+03, 5.4925e+01, 5.4884e+01, 5.4994e+01, 5.5046e+01,\n",
-       "           5.4717e+01],\n",
-       "          [1.4530e+03, 5.5026e+01, 5.4991e+01, 5.5057e+01, 5.5074e+01,\n",
-       "           5.4720e+01],\n",
-       "          [5.1200e+02, 5.5049e+01, 5.5064e+01, 5.5029e+01, 5.5075e+01,\n",
-       "           5.4959e+01]],\n",
-       " \n",
-       "         [[1.3450e+03, 5.4925e+01, 5.4884e+01, 5.4994e+01, 5.5046e+01,\n",
-       "           5.4717e+01],\n",
-       "          [1.4530e+03, 5.5026e+01, 5.4991e+01, 5.5057e+01, 5.5074e+01,\n",
-       "           5.4720e+01],\n",
-       "          [5.1200e+02, 5.5049e+01, 5.5064e+01, 5.5029e+01, 5.5075e+01,\n",
-       "           5.4959e+01],\n",
-       "          [2.9000e+01, 5.5023e+01, 5.5027e+01, 5.5000e+01, 5.5045e+01,\n",
-       "           5.4947e+01]],\n",
-       " \n",
-       "         ...,\n",
-       " \n",
-       "         [[1.5400e+02, 5.7902e+01, 5.7932e+01, 5.5897e+01, 5.8077e+01,\n",
-       "           5.5897e+01],\n",
-       "          [7.8500e+02, 5.7908e+01, 5.7996e+01, 5.7868e+01, 5.8163e+01,\n",
-       "           5.6303e+01],\n",
-       "          [1.1060e+03, 5.7943e+01, 5.7858e+01, 5.7782e+01, 5.8123e+01,\n",
-       "           5.7745e+01],\n",
-       "          [1.1560e+03, 5.7902e+01, 5.7782e+01, 5.8181e+01, 5.8181e+01,\n",
-       "           5.7774e+01]],\n",
-       " \n",
-       "         [[7.8500e+02, 5.7908e+01, 5.7996e+01, 5.7868e+01, 5.8163e+01,\n",
-       "           5.6303e+01],\n",
-       "          [1.1060e+03, 5.7943e+01, 5.7858e+01, 5.7782e+01, 5.8123e+01,\n",
-       "           5.7745e+01],\n",
-       "          [1.1560e+03, 5.7902e+01, 5.7782e+01, 5.8181e+01, 5.8181e+01,\n",
-       "           5.7774e+01],\n",
-       "          [1.0000e+00, 5.8181e+01, 5.8181e+01, 5.8181e+01, 5.8181e+01,\n",
-       "           5.8181e+01]],\n",
-       " \n",
-       "         [[1.1060e+03, 5.7943e+01, 5.7858e+01, 5.7782e+01, 5.8123e+01,\n",
-       "           5.7745e+01],\n",
-       "          [1.1560e+03, 5.7902e+01, 5.7782e+01, 5.8181e+01, 5.8181e+01,\n",
-       "           5.7774e+01],\n",
-       "          [1.0000e+00, 5.8181e+01, 5.8181e+01, 5.8181e+01, 5.8181e+01,\n",
-       "           5.8181e+01],\n",
-       "          [3.0000e+00, 5.7409e+01, 5.7506e+01, 5.7216e+01, 5.7506e+01,\n",
-       "           5.7216e+01]]]))"
+       "(torch.Size([2787, 6, 6]), torch.Size([2787, 4, 6]))"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2330,7 +2233,7 @@
    "source": [
     "torch_inputs = torch.from_numpy(inputs).to(torch.float32)\n",
     "torch_targets = torch.from_numpy(targets).to(torch.float32)\n",
-    "torch_inputs, torch_targets"
+    "torch_inputs.shape, torch_targets.shape"
    ]
   },
   {
@@ -2430,7 +2333,7 @@
    "outputs": [],
    "source": [
     "class Decoder(nn.Module):\n",
-    "    def __init__(self, n_f: int, n_a: int, *args, **kwargs):\n",
+    "    def __init__(self, n_f: int, n_a: int, target_n_f: int, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        # we would want to input the close, open, high, low, volume, and volume_weighted\n",
     "        # values as features to the lstm at each timestep\n",
@@ -2438,7 +2341,7 @@
     "        \n",
     "        # we would also want to output the same amount of features for\n",
     "        # the dense layers as we did earlier in our input for our LSTM\n",
-    "        self.dense = nn.Linear(in_features=n_a, out_features=target_window_size)\n",
+    "        self.dense = nn.Linear(in_features=n_a, out_features=target_n_f)\n",
     "        \n",
     "    def forward(self, init_dec_input, context_vec, target_windows, teacher_force_prob):\n",
     "        \"\"\"\n",
@@ -2458,19 +2361,79 @@
     "        # the target windows variable containing our targets\n",
     "        # the model needs to learn to forecast\n",
     "        T_y = target_windows.shape[1]\n",
+    "        outputs = []\n",
     "\n",
     "        # set the input at timestep t intially to the decoder input\n",
     "        # which is the input of the encoder at its last timestep\n",
-    "        input_at_t = init_dec_input\n",
+    "        input_at_t = init_dec_input.unsqueeze(1)\n",
+    "        print(input_at_t.shape)\n",
     "\n",
     "        # context vec is a list containing the encoders\n",
     "        # hidden state and cell state at the last timestep\n",
     "        h, c = context_vec\n",
     "        for t in range(T_y):\n",
-    "\n",
+    "            # get the hidden state at this time step which would\n",
+    "            # be of shape (m, 1, n_a)\n",
     "            dec_outs, [h, c] = self.lstm(input_at_t, [h, c])\n",
+    "            # print(dec_outs.shape)\n",
     "\n",
-    "        \n"
+    "            dense_outs = self.dense(dec_outs)\n",
+    "            outputs.append(dense_outs)\n",
+    "\n",
+    "            # we use either the target output at timestep t or the\n",
+    "            # predicted outuput from the dense layer at timestep t\n",
+    "            # this is what we call teacher forcing\n",
+    "            input_at_t = target_windows[:, t, :].unsqueeze(1) if torch.rand(1) < teacher_force_prob else dense_outs\n",
+    "\n",
+    "        print(len(outputs))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dec_hyper_params = {\"n_f\": 6, \"n_a\": 32, \"target_n_f\": targets.shape[2]}\n",
+    "dec = Decoder(**dec_hyper_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_dec_input = torch_inputs[:, -1, :]\n",
+    "context_vec = [h, c]\n",
+    "teacher_force_prob = 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2787, 1, 6])\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "dec(init_dec_input, context_vec, torch_targets, teacher_force_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.tensor([])"
    ]
   }
  ],
